# brigitte

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Settings.qml  conanfile.py  config.yaml.template  main.cpp  main.qml  qml.qrc
cpp/: Commits.cpp  Commits.h  Git.cpp  Git.h  Projects.cpp  Projects.h  Settings.cpp  Settings.h
qml/: GitTree.qml  ProjectList.qml  Settings.qml  main.qml
